[package]
name = "discord-bot-serenity"
version = "0.1.0"
authors = ["DarkCh4osss <67869598+DarkCh4osss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"